base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api-service
  labels:
    app: hello-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: hello-api
